--- a/style.css
+++ b/style.css
@@ -2,28 +2,40 @@ body{
     background: #96a6ff;
 }
 
-/**/
-.PacMan{
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    top: 5px;
-    left: 5px;
-    /*background: white;*/
-    overflow: hidden;
-}
+
+
+
+/*         
 .PacMan_spritesheet{
     animation: moveSpritesheet 1s steps(3) infinite;
     position: absolute;
 }
+*/
+
 .Labirynth{
+    /*Showing the Labirybth*/
     position: relative;
-    width: 228px;
+    width: 226px;
     height: 248px;
     background: white;
     overflow: hidden;
 }
-.going-left{
+
+
+.PacMan {
+    /* If we type the following it is showing the characters --> margin: 0px 16px 16px -228px;*/
+    position: inherit;
+    width: 50px;
+    height: 65px;
+   margin-left: -227px;
+
+
+    overflow: hidden;
+        }
+
+
+/*
+ going-left{
     top: -16px;
 }
 .going-up{
@@ -41,3 +53,4 @@ body{
     }
     
 }
+*/
