--- a/style.css
+++ b/style.css
@@ -31,5 +31,16 @@ body{
     height: 8px;
 }
 
+.BigDot{
+    position: absolute;
+}
+.BigDot img{
+    z-index: 3;
+    object-fit: none;
+    object-position: right -210px bottom 0;
+    width: 12px;
+    height: 12px;
+}
+
 
 
